--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react": "^18.2.0",
     "rollup": "^2.77.3",
     "rollup-plugin-dts": "^4.2.2",
-    "typescript": "^4.7.4",
-    "tslib": "^2.4.0"
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
   }
 }
