--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/canocalir"
   },
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Hacket is a designer powered react components library for great apps",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -40,6 +40,7 @@
     "react": "^18.2.0",
     "rollup": "^2.77.3",
     "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   }
