--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,10 @@
 {
   "compilerOptions": {
-    // Default
     "target": "es5", 
     "esModuleInterop": true, 
     "forceConsistentCasingInFileNames": true,
     "strict": true, 
     "skipLibCheck": true,
-
-    // Added
     "jsx": "react", 
     "module": "ESNext",  
     "declaration": true,
@@ -17,5 +14,9 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "emitDeclarationOnly": true,
-  }
+  },
+  "exclude":[
+    "src/stories",
+    "**/*.stories.tsx"
+  ]
 }
